--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "npmpublishtest",
+  "name": "cui-clone",
   "version": "1.0.0",
   "description": "",
   "main": "clone.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "rollup": "^3.26.0"
+  }
 }
